// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderJava matches the snapshot for multi-version.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.github.ht-sdks.events-sdk-java:analytics v0.0.2 or later.

package analytics;

import com.hightouch.analytics.Analytics;
import com.hightouch.analytics.messages.AliasMessage;
import com.hightouch.analytics.messages.GroupMessage;
import com.hightouch.analytics.messages.IdentifyMessage;
import com.hightouch.analytics.messages.MessageBuilder;
import com.hightouch.analytics.messages.PageMessage;
import com.hightouch.analytics.messages.ScreenMessage;
import com.hightouch.analytics.messages.TrackMessage;
import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;
import java.lang.reflect.Field;
import java.lang.reflect.Modifier;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Collection;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;

public final class HtEvents {
    public static final class TrackOrderCompletedV1 {
        private String orderId;

        public String getOrderId() { return orderId; }
        public void setOrderId(String value) { this.orderId = value; }
    }

    public static final class TrackOrderCompletedV2 {
        private String orderId;
        private Double total;

        public String getOrderId() { return orderId; }
        public void setOrderId(String value) { this.orderId = value; }

        public Double getTotal() { return total; }
        public void setTotal(Double value) { this.total = value; }
    }

    @Retention(RetentionPolicy.RUNTIME)
    @Target(ElementType.FIELD)
    @interface JsonName {
        String value();
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> cloneMap(Map<String, ?> map) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (map == null) {
            return out;
        }
        for (Map.Entry<String, ?> entry : map.entrySet()) {
            out.put(entry.getKey(), entry.getValue());
        }
        return out;
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> setAtPath(
            Map<String, Object> root, String[] path, String value) {
        if (path == null || path.length == 0) {
            return root;
        }
        Map<String, Object> clone = cloneMap(root);
        Map<String, Object> cursor = clone;
        for (int i = 0; i < path.length - 1; i++) {
            String key = path[i];
            Object existing = cursor.get(key);
            Map<String, Object> child;
            if (existing instanceof Map) {
                child = cloneMap((Map<String, ?>) existing);
            } else {
                child = new LinkedHashMap<>();
            }
            cursor.put(key, child);
            cursor = child;
        }
        cursor.put(path[path.length - 1], value);
        return clone;
    }

    @SuppressWarnings("unchecked")
    private static Object convertValue(Object value) {
        if (value instanceof String
                || value instanceof Number
                || value instanceof Boolean) {
            return value;
        }
        if (value instanceof Map) {
            Map<String, Object> out = new LinkedHashMap<>();
            for (Map.Entry<?, ?> entry : ((Map<?, ?>) value).entrySet()) {
                if (entry.getKey() == null || entry.getValue() == null) {
                    continue;
                }
                out.put(String.valueOf(entry.getKey()), convertValue(entry.getValue()));
            }
            return out;
        }
        if (value instanceof Collection) {
            List<Object> out = new ArrayList<>();
            for (Object item : (Collection<?>) value) {
                if (item != null) {
                    out.add(convertValue(item));
                }
            }
            return out;
        }
        if (value.getClass().isEnum()) {
            return value.toString();
        }
        if (value.getClass().getEnclosingClass() == HtEvents.class) {
            return toMap(value);
        }
        return value;
    }

    private static Map<String, Object> toMap(Object value) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (value == null) {
            return out;
        }
        if (value instanceof Map) {
            return cloneMap((Map<String, ?>) value);
        }
        for (Field field : value.getClass().getDeclaredFields()) {
            int modifiers = field.getModifiers();
            if (Modifier.isStatic(modifiers) || field.isSynthetic()) {
                continue;
            }
            field.setAccessible(true);
            Object fieldValue;
            try {
                fieldValue = field.get(value);
            } catch (IllegalAccessException e) {
                continue;
            }
            if (fieldValue == null) {
                continue;
            }
            JsonName jsonName = field.getAnnotation(JsonName.class);
            out.put(
                    jsonName != null ? jsonName.value() : field.getName(),
                    convertValue(fieldValue));
        }
        return out;
    }

    private static final class Injected {
        final Map<String, Object> data;
        final Map<String, Object> context;

        Injected(Map<String, Object> data, Map<String, Object> context) {
            this.data = data;
            this.context = context;
        }
    }

    private static Injected withSchemaVersion(
            Map<String, Object> data,
            Map<String, ?> context,
            String[] path,
            String version,
            String envelopeKey) {
        if (path == null || path.length == 0) {
            return new Injected(data, context == null ? null : cloneMap(context));
        }
        String head = path[0];
        String[] rest = Arrays.copyOfRange(path, 1, path.length);
        if (head.equals(envelopeKey)) {
            return new Injected(
                    setAtPath(cloneMap(data), rest, version),
                    context == null ? null : cloneMap(context));
        }
        if (head.equals("context")) {
            Map<String, Object> ctx = context == null ? new LinkedHashMap<>() : cloneMap(context);
            return new Injected(data, setAtPath(ctx, rest, version));
        }
        return new Injected(data, context == null ? null : cloneMap(context));
    }

    @SuppressWarnings("rawtypes")
    private static void applyContext(MessageBuilder builder, Map<String, Object> context) {
        if (context != null && !context.isEmpty()) {
            builder.context(context);
        }
    }

    private final Analytics analytics;

    public HtEvents(Analytics analytics) {
        this.analytics = analytics;
    }

    public void trackOrderCompletedV1(String userId, TrackOrderCompletedV1 properties) {
        trackOrderCompletedV1(userId, properties, null);
    }

    public void trackOrderCompletedV1(String userId, TrackOrderCompletedV1 properties, Map<String, ?> context) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                context,
                new String[] {},
                "v1",
                "properties");
        TrackMessage.Builder builder =
                TrackMessage.builder("Order Completed").userId(userId).properties(injected.data);
        applyContext(builder, injected.context);
        analytics.enqueue(builder);
    }

    public void trackOrderCompletedV2(String userId, TrackOrderCompletedV2 properties) {
        trackOrderCompletedV2(userId, properties, null);
    }

    public void trackOrderCompletedV2(String userId, TrackOrderCompletedV2 properties, Map<String, ?> context) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                context,
                new String[] {},
                "v2",
                "properties");
        TrackMessage.Builder builder =
                TrackMessage.builder("Order Completed").userId(userId).properties(injected.data);
        applyContext(builder, injected.context);
        analytics.enqueue(builder);
    }

    public void trackOrderCompleted(String userId, TrackOrderCompletedV2 properties) {
        trackOrderCompleted(userId, properties, null);
    }

    public void trackOrderCompleted(String userId, TrackOrderCompletedV2 properties, Map<String, ?> context) {
        trackOrderCompletedV2(userId, properties, context);
    }
}
"
`;

exports[`renderJava matches the snapshot for simple-track.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.github.ht-sdks.events-sdk-java:analytics v0.0.2 or later.

package analytics;

import com.hightouch.analytics.Analytics;
import com.hightouch.analytics.messages.AliasMessage;
import com.hightouch.analytics.messages.GroupMessage;
import com.hightouch.analytics.messages.IdentifyMessage;
import com.hightouch.analytics.messages.MessageBuilder;
import com.hightouch.analytics.messages.PageMessage;
import com.hightouch.analytics.messages.ScreenMessage;
import com.hightouch.analytics.messages.TrackMessage;
import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;
import java.lang.reflect.Field;
import java.lang.reflect.Modifier;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Collection;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;

public final class HtEvents {
    public static final class TrackOrderCompletedDefault {
        private String orderId;
        private Double total;

        public String getOrderId() { return orderId; }
        public void setOrderId(String value) { this.orderId = value; }

        public Double getTotal() { return total; }
        public void setTotal(Double value) { this.total = value; }
    }

    @Retention(RetentionPolicy.RUNTIME)
    @Target(ElementType.FIELD)
    @interface JsonName {
        String value();
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> cloneMap(Map<String, ?> map) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (map == null) {
            return out;
        }
        for (Map.Entry<String, ?> entry : map.entrySet()) {
            out.put(entry.getKey(), entry.getValue());
        }
        return out;
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> setAtPath(
            Map<String, Object> root, String[] path, String value) {
        if (path == null || path.length == 0) {
            return root;
        }
        Map<String, Object> clone = cloneMap(root);
        Map<String, Object> cursor = clone;
        for (int i = 0; i < path.length - 1; i++) {
            String key = path[i];
            Object existing = cursor.get(key);
            Map<String, Object> child;
            if (existing instanceof Map) {
                child = cloneMap((Map<String, ?>) existing);
            } else {
                child = new LinkedHashMap<>();
            }
            cursor.put(key, child);
            cursor = child;
        }
        cursor.put(path[path.length - 1], value);
        return clone;
    }

    @SuppressWarnings("unchecked")
    private static Object convertValue(Object value) {
        if (value instanceof String
                || value instanceof Number
                || value instanceof Boolean) {
            return value;
        }
        if (value instanceof Map) {
            Map<String, Object> out = new LinkedHashMap<>();
            for (Map.Entry<?, ?> entry : ((Map<?, ?>) value).entrySet()) {
                if (entry.getKey() == null || entry.getValue() == null) {
                    continue;
                }
                out.put(String.valueOf(entry.getKey()), convertValue(entry.getValue()));
            }
            return out;
        }
        if (value instanceof Collection) {
            List<Object> out = new ArrayList<>();
            for (Object item : (Collection<?>) value) {
                if (item != null) {
                    out.add(convertValue(item));
                }
            }
            return out;
        }
        if (value.getClass().isEnum()) {
            return value.toString();
        }
        if (value.getClass().getEnclosingClass() == HtEvents.class) {
            return toMap(value);
        }
        return value;
    }

    private static Map<String, Object> toMap(Object value) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (value == null) {
            return out;
        }
        if (value instanceof Map) {
            return cloneMap((Map<String, ?>) value);
        }
        for (Field field : value.getClass().getDeclaredFields()) {
            int modifiers = field.getModifiers();
            if (Modifier.isStatic(modifiers) || field.isSynthetic()) {
                continue;
            }
            field.setAccessible(true);
            Object fieldValue;
            try {
                fieldValue = field.get(value);
            } catch (IllegalAccessException e) {
                continue;
            }
            if (fieldValue == null) {
                continue;
            }
            JsonName jsonName = field.getAnnotation(JsonName.class);
            out.put(
                    jsonName != null ? jsonName.value() : field.getName(),
                    convertValue(fieldValue));
        }
        return out;
    }

    private static final class Injected {
        final Map<String, Object> data;
        final Map<String, Object> context;

        Injected(Map<String, Object> data, Map<String, Object> context) {
            this.data = data;
            this.context = context;
        }
    }

    private static Injected withSchemaVersion(
            Map<String, Object> data,
            Map<String, ?> context,
            String[] path,
            String version,
            String envelopeKey) {
        if (path == null || path.length == 0) {
            return new Injected(data, context == null ? null : cloneMap(context));
        }
        String head = path[0];
        String[] rest = Arrays.copyOfRange(path, 1, path.length);
        if (head.equals(envelopeKey)) {
            return new Injected(
                    setAtPath(cloneMap(data), rest, version),
                    context == null ? null : cloneMap(context));
        }
        if (head.equals("context")) {
            Map<String, Object> ctx = context == null ? new LinkedHashMap<>() : cloneMap(context);
            return new Injected(data, setAtPath(ctx, rest, version));
        }
        return new Injected(data, context == null ? null : cloneMap(context));
    }

    @SuppressWarnings("rawtypes")
    private static void applyContext(MessageBuilder builder, Map<String, Object> context) {
        if (context != null && !context.isEmpty()) {
            builder.context(context);
        }
    }

    private final Analytics analytics;

    public HtEvents(Analytics analytics) {
        this.analytics = analytics;
    }

    public void trackOrderCompletedDefault(String userId, TrackOrderCompletedDefault properties) {
        trackOrderCompletedDefault(userId, properties, null);
    }

    public void trackOrderCompletedDefault(String userId, TrackOrderCompletedDefault properties, Map<String, ?> context) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                context,
                new String[] {"context", "protocols", "schemaVersion"},
                "default",
                "properties");
        TrackMessage.Builder builder =
                TrackMessage.builder("Order Completed").userId(userId).properties(injected.data);
        applyContext(builder, injected.context);
        analytics.enqueue(builder);
    }

    public void trackOrderCompleted(String userId, TrackOrderCompletedDefault properties) {
        trackOrderCompleted(userId, properties, null);
    }

    public void trackOrderCompleted(String userId, TrackOrderCompletedDefault properties, Map<String, ?> context) {
        trackOrderCompletedDefault(userId, properties, context);
    }
}
"
`;

exports[`renderJava matches the snapshot for with-refs.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.github.ht-sdks.events-sdk-java:analytics v0.0.2 or later.

package analytics;

import com.hightouch.analytics.Analytics;
import com.hightouch.analytics.messages.AliasMessage;
import com.hightouch.analytics.messages.GroupMessage;
import com.hightouch.analytics.messages.IdentifyMessage;
import com.hightouch.analytics.messages.MessageBuilder;
import com.hightouch.analytics.messages.PageMessage;
import com.hightouch.analytics.messages.ScreenMessage;
import com.hightouch.analytics.messages.TrackMessage;
import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;
import java.lang.reflect.Field;
import java.lang.reflect.Modifier;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Collection;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;

public final class HtEvents {
    public static final class IdentifyDefault {
        private String email;

        public String getEmail() { return email; }
        public void setEmail(String value) { this.email = value; }
    }

    public static final class TrackCartViewedDefault {
        private Double amount;
        private String currency;
        private Double itemCount;

        public Double getAmount() { return amount; }
        public void setAmount(Double value) { this.amount = value; }

        public String getCurrency() { return currency; }
        public void setCurrency(String value) { this.currency = value; }

        public Double getItemCount() { return itemCount; }
        public void setItemCount(Double value) { this.itemCount = value; }
    }

    @Retention(RetentionPolicy.RUNTIME)
    @Target(ElementType.FIELD)
    @interface JsonName {
        String value();
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> cloneMap(Map<String, ?> map) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (map == null) {
            return out;
        }
        for (Map.Entry<String, ?> entry : map.entrySet()) {
            out.put(entry.getKey(), entry.getValue());
        }
        return out;
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> setAtPath(
            Map<String, Object> root, String[] path, String value) {
        if (path == null || path.length == 0) {
            return root;
        }
        Map<String, Object> clone = cloneMap(root);
        Map<String, Object> cursor = clone;
        for (int i = 0; i < path.length - 1; i++) {
            String key = path[i];
            Object existing = cursor.get(key);
            Map<String, Object> child;
            if (existing instanceof Map) {
                child = cloneMap((Map<String, ?>) existing);
            } else {
                child = new LinkedHashMap<>();
            }
            cursor.put(key, child);
            cursor = child;
        }
        cursor.put(path[path.length - 1], value);
        return clone;
    }

    @SuppressWarnings("unchecked")
    private static Object convertValue(Object value) {
        if (value instanceof String
                || value instanceof Number
                || value instanceof Boolean) {
            return value;
        }
        if (value instanceof Map) {
            Map<String, Object> out = new LinkedHashMap<>();
            for (Map.Entry<?, ?> entry : ((Map<?, ?>) value).entrySet()) {
                if (entry.getKey() == null || entry.getValue() == null) {
                    continue;
                }
                out.put(String.valueOf(entry.getKey()), convertValue(entry.getValue()));
            }
            return out;
        }
        if (value instanceof Collection) {
            List<Object> out = new ArrayList<>();
            for (Object item : (Collection<?>) value) {
                if (item != null) {
                    out.add(convertValue(item));
                }
            }
            return out;
        }
        if (value.getClass().isEnum()) {
            return value.toString();
        }
        if (value.getClass().getEnclosingClass() == HtEvents.class) {
            return toMap(value);
        }
        return value;
    }

    private static Map<String, Object> toMap(Object value) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (value == null) {
            return out;
        }
        if (value instanceof Map) {
            return cloneMap((Map<String, ?>) value);
        }
        for (Field field : value.getClass().getDeclaredFields()) {
            int modifiers = field.getModifiers();
            if (Modifier.isStatic(modifiers) || field.isSynthetic()) {
                continue;
            }
            field.setAccessible(true);
            Object fieldValue;
            try {
                fieldValue = field.get(value);
            } catch (IllegalAccessException e) {
                continue;
            }
            if (fieldValue == null) {
                continue;
            }
            JsonName jsonName = field.getAnnotation(JsonName.class);
            out.put(
                    jsonName != null ? jsonName.value() : field.getName(),
                    convertValue(fieldValue));
        }
        return out;
    }

    private static final class Injected {
        final Map<String, Object> data;
        final Map<String, Object> context;

        Injected(Map<String, Object> data, Map<String, Object> context) {
            this.data = data;
            this.context = context;
        }
    }

    private static Injected withSchemaVersion(
            Map<String, Object> data,
            Map<String, ?> context,
            String[] path,
            String version,
            String envelopeKey) {
        if (path == null || path.length == 0) {
            return new Injected(data, context == null ? null : cloneMap(context));
        }
        String head = path[0];
        String[] rest = Arrays.copyOfRange(path, 1, path.length);
        if (head.equals(envelopeKey)) {
            return new Injected(
                    setAtPath(cloneMap(data), rest, version),
                    context == null ? null : cloneMap(context));
        }
        if (head.equals("context")) {
            Map<String, Object> ctx = context == null ? new LinkedHashMap<>() : cloneMap(context);
            return new Injected(data, setAtPath(ctx, rest, version));
        }
        return new Injected(data, context == null ? null : cloneMap(context));
    }

    @SuppressWarnings("rawtypes")
    private static void applyContext(MessageBuilder builder, Map<String, Object> context) {
        if (context != null && !context.isEmpty()) {
            builder.context(context);
        }
    }

    private final Analytics analytics;

    public HtEvents(Analytics analytics) {
        this.analytics = analytics;
    }

    public void identifyDefault(String userId, IdentifyDefault traits) {
        identifyDefault(userId, traits, null);
    }

    public void identifyDefault(String userId, IdentifyDefault traits, Map<String, ?> context) {
        Injected injected = withSchemaVersion(
                toMap(traits),
                context,
                new String[] {},
                "default",
                "traits");
        IdentifyMessage.Builder builder =
                IdentifyMessage.builder().userId(userId).traits(injected.data);
        applyContext(builder, injected.context);
        analytics.enqueue(builder);
    }

    public void identify(String userId, IdentifyDefault traits) {
        identify(userId, traits, null);
    }

    public void identify(String userId, IdentifyDefault traits, Map<String, ?> context) {
        identifyDefault(userId, traits, context);
    }

    public void trackCartViewedDefault(String userId, TrackCartViewedDefault properties) {
        trackCartViewedDefault(userId, properties, null);
    }

    public void trackCartViewedDefault(String userId, TrackCartViewedDefault properties, Map<String, ?> context) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                context,
                new String[] {},
                "default",
                "properties");
        TrackMessage.Builder builder =
                TrackMessage.builder("Cart Viewed").userId(userId).properties(injected.data);
        applyContext(builder, injected.context);
        analytics.enqueue(builder);
    }

    public void trackCartViewed(String userId, TrackCartViewedDefault properties) {
        trackCartViewed(userId, properties, null);
    }

    public void trackCartViewed(String userId, TrackCartViewedDefault properties, Map<String, ?> context) {
        trackCartViewedDefault(userId, properties, context);
    }
}
"
`;
